[tool.poetry]
name = "cryt"
version = "0.1.0"
description = ""
authors = ["atsuhiro-narita <alayashiki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.5.1"
fire = "^0.3.1"
ccxt = "^1.39.75"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
